frontend/src/components/how_to_play/how_to.css
.how-to-container{
    background: url('../../app/assets/background2.jpg')no-repeat center/cover;
    z-index: 0;
    display: flex;
    justify-content: center;
}


.how-title{
   color: #FAFAFA;
   margin-right: 10px;
   text-align: center;
   font-size: 4em;
}


.description{
    margin: 20px;
    color: #e1c4a3;
    font-size: 2em;
    text-align: center;
    width: 500px;
    height: 80%;
    border-radius: 10px;
    background-color: black;
    opacity: 0.6;

}

.mvsm{
    display: flex;
    justify-content: center;
}

.how-to-vs{
    width: 20%;
    height: 0%;
}

.minion1, .minion2{
    width: 50%;
    height: 50%;
}

.vs-background {
  /* background-image: radial-gradient(circle, #ffe786bf, #f06b0690);
  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
    -5px -5px 30px 15px rgba(0, 0, 0, 0.22); */
  width: 9rem;
  height: 12rem;
  display: flex;
  padding-top: 20px;
  justify-content: center;
  z-index: 2;
  border-radius: 40px;
  opacity: 1.0;
}

@media (max-width: 600px) {
    .how-to-container {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .description {
        width: 350px;
    }
}

